Fix some dropdown menu spacing

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -75,10 +75,15 @@
   color: white;
   font-family: var(--bs-font-monospace);
   font-style: normal;
-  padding: 0.35rem;
+  padding: 0.35rem 1rem;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+#pageheader .navbar .nav-item ul.dropdown-menu {
+  background: transparent;
+  padding: 0.35rem;
 }
 
 #pageheader .navbar .dropdown-item.active,
@@ -93,9 +98,7 @@
   color: rgba(255, 255, 255, 0.85);
 }
 
-#pageheader .navbar .nav-item ul.dropdown-menu {
-  background: transparent;
-}
+
 /*
 #pageheader .navbar .nav-item ul.dropdown-menu {
     z-index: 0;
